--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Hola mundo</title>
 </head>
 <body>
-    <p>Hola preWork Windows Dia 1</p>
+    <p>Hola preWork Windows Dia 2, con push 2 a Github</p>
 </body>
 </html>
 
